--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,8 +45,8 @@ stages:
     - powershell: |
         Write-Host "Ejecutando pruebas unitarias..."
         $env:PYTHONPATH = "$(Build.SourcesDirectory)"
-        Write-Host "PYTHONPATH=$env:PYTHONPATH"
-        Write-Host "Ejecutando pruebas unitarias..."
+        Write-Host "PYTHONPATH establecido en $env:PYTHONPATH"
+        cd "$(Build.SourcesDirectory)"
         pytest test --junitxml=results.xml
       displayName: 'Ejecutar Pruebas Unitarias (FAIL ON ERROR)'
 
