--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,10 +43,10 @@ stages:
           # ✅ Pruebas unitarias con PowerShell (compatible en Windows)
           - powershell: |
               Write-Host "Ejecutando pruebas unitarias..."
-              $env:PYTHONPATH = "$(Build.SourcesDirectory)"
-              Write-Host "PYTHONPATH establecido en $env:PYTHONPATH"
-              cd "$(Build.SourcesDirectory)"
-              pytest test --junitxml=results.xml
+              cd "$(Build.SourcesDirectory)/SGT"
+              $env:PYTHONPATH = "$(Build.SourcesDirectory)/SGT"
+              Write-Host "PYTHONPATH = $env:PYTHONPATH"
+              pytest test --maxfail=1 --disable-warnings -q --junitxml=$(Build.SourcesDirectory)/results.xml
             displayName: "Ejecutar Pruebas Unitarias (FAIL ON ERROR)"
 
           - task: PublishTestResults@2
