Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 # =====================================================
 # 📦 Pipeline CI/CD para App Flask (SGT)
-# Flujo: CI (Build/Test) -> CD (Deploy a Azure WebApp)
+# Flujo simplificado: CI (Build) -> CD (Deploy a Azure WebApp)
 # =====================================================
 
 trigger:
@@ -14,17 +14,17 @@ variables:
   DeploymentPath: '$(Build.ArtifactStagingDirectory)/$(ArtifactName)'
   ServiceConnectionName: 'AZ-Conexion-SGT' # Nombre de la conexión de servicio en Azure DevOps
   AppServiceName: 'sgt-app-integrated-2025'  # Nombre de tu Azure App Service
-  PythonVersion: '3.11' 
+  PythonVersion: '3.11'
 
 # =====================================================
-# 1️⃣ Etapa: CI - Integración Continua (Pruebas Unitarias)
+# 1️⃣ Etapa: CI - Empaquetado del Proyecto
 # =====================================================
 stages:
-- stage: CI_BuildAndTest
-  displayName: 'Etapa 1: Integración Continua (Pruebas y Empaquetado)'
+- stage: CI_Build
+  displayName: 'Etapa 1: Empaquetado del Proyecto'
   jobs:
-  - job: PythonCI
-    displayName: 'Job: Instalación, Pruebas y Empaquetado'
+  - job: BuildApp
+    displayName: 'Job: Instalación y empaquetado'
     pool:
       name: 'AgenteLocal'
     steps:
@@ -37,42 +37,19 @@ stages:
     - script: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest requests
       displayName: 'Instalar dependencias del proyecto'
-
-    # ✅ Tarea Corregida: Solución al ModuleNotFoundError en Windows
-    - powershell: |
-        Write-Host "Ejecutando pruebas unitarias..."
-        
-        # 1. Aseguramos el directorio de ejecución
-        cd "$(Build.SourcesDirectory)"
-        
-        # 2. CORRECCIÓN CLAVE: Usamos punto y coma (;) como separador de ruta para Windows.
-        #    Esto permite que Python encuentre el paquete 'sgt' en la raíz.
-        $env:PYTHONPATH = "$(Build.SourcesDirectory);$env:PYTHONPATH" 
-        Write-Host "PYTHONPATH establecido en: $env:PYTHONPATH"
-
-        # 3. Ejecutar pytest
-        pytest test --maxfail=1 --disable-warnings -v --junitxml=results.xml
-      displayName: 'Ejecutar Pruebas Unitarias (FAIL ON ERROR)'
-      
-    - task: PublishTestResults@2
-      displayName: 'Publicar Resultados de Pruebas Unitarias'
-      inputs:
-        testResultsFormat: 'JUnit'
-        testResultsFiles: '**/results.xml' 
-        failTaskOnFailedTests: true
 
     - task: CopyFiles@2
       displayName: 'Copiar Código de Aplicación para Despliegue'
       inputs:
         SourceFolder: '$(Build.SourcesDirectory)'
-        # Se copian solo archivos esenciales para el despliegue
+        # Archivos esenciales para el despliegue
         Contents: |
           sgt/**
+          templates/**
           requirements.txt
-          app.py 
-          main.py 
+          app.py
+          main.py
         TargetFolder: '$(DeploymentPath)'
 
     - task: PublishBuildArtifacts@1
@@ -81,22 +58,20 @@ stages:
         pathToPublish: '$(DeploymentPath)'
         artifactName: '$(ArtifactName)'
 
-# ---------------------------------------------------------------------------------------
-
 # =====================================================
-# 2️⃣ Etapa: CD - Despliegue Continuo en Azure
+# 2️⃣ Etapa: CD - Despliegue en Azure App Service
 # =====================================================
 - stage: CD_Deployment
   displayName: 'Etapa 2: Despliegue en Azure App Service'
-  dependsOn: CI_BuildAndTest
+  dependsOn: CI_Build
   condition: succeeded()
 
   jobs:
   - deployment: DeployToAzure
     displayName: 'Job: Desplegar Flask App en Azure'
-    environment: 'Entorno-Integrado-SGT' 
+    environment: 'Entorno-Integrado-SGT'
     pool:
-      name: 'AgenteLocal' 
+      name: 'AgenteLocal'
     strategy:
       runOnce:
         deploy:
@@ -115,41 +90,4 @@ stages:
               appName: '$(AppServiceName)'
               appType: webApp
               package: '$(Pipeline.Workspace)/$(ArtifactName)/'
-              startupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 --timeout=90 sgt.main:app' 
-
-# ---------------------------------------------------------------------------------------
-
-# =====================================================
-# 3️⃣ Etapa: Test Funcional Post-Deploy
-# =====================================================
-- stage: Functional_Tests
-  displayName: 'Etapa 3: Pruebas Funcionales Post-Despliegue'
-  dependsOn: CD_Deployment
-  condition: succeeded()
-
-  jobs:
-  - job: FunctionalTest
-    displayName: 'Job: Validación en Entorno Productivo (Post-Deploy)'
-    pool:
-      name: 'AgenteLocal'
-    steps:
-      - task: UsePythonVersion@0
-        displayName: 'Configurar Python $(PythonVersion)'
-        inputs:
-          versionSpec: '$(PythonVersion)'
-
-      - script: |
-          pip install requests pytest
-        displayName: 'Instalar dependencias de prueba funcional'
-        
-      - task: DownloadPipelineArtifact@2
-        displayName: 'Descargar Artefacto para Tests Funcionales'
-        inputs:
-          artifactName: '$(ArtifactName)'
-          path: '$(Pipeline.Workspace)/FunctionalTests' 
-
-      - powershell: |
-          Write-Host "Ejecutando pruebas funcionales en la URL desplegada..."
-          cd "$(Pipeline.Workspace)/FunctionalTests"
-          pytest test/test_sample.py 
-        displayName: 'Ejecutar Pruebas Funcionales Post-Despliegue'
+              startupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 --timeout=90 sgt.main:app'
