--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,91 +1,71 @@
 # =====================================================
-# 📦 Pipeline CI/CD para App Flask (SGT)
-# Flujo: CI (Build/Test) -> CD (Deploy a Azure WebApp)
-# Objetivo: Desplegar login.html servido por Flask
+# 📦 Pipeline CI/CD simplificado para App Flask (SGT)
+# Flujo: Build -> Deploy a Azure WebApp
 # =====================================================
 
 trigger:
   - main
 
 pool:
-  name: "AgenteLocal" # 👷‍♂ Asegúrate que exista este agente local (Windows)
+  name: "AgenteLocal" # 👷‍♂️ Asegúrate que exista este agente local (Windows)
 
 variables:
-  AppSourceDir: "$(Build.SourcesDirectory)/sgt"
   ArtifactName: "sgt-deploy-package"
   DeploymentPath: "$(Build.ArtifactStagingDirectory)/$(ArtifactName)"
   ServiceConnectionName: "AZ-Conexion-SGT"
-  AppServiceName: "sgt-app-integrated-2025" # ✅ Nombre corregido
+  AppServiceName: "sgt-app-integrated-2025"
+  PythonVersion: "3.11"
 
 # =====================================================
-# 1️⃣ Etapa: CI - Integración Continua (Pruebas Unitarias)
+# 1️⃣ Etapa: Build y Empaquetado
 # =====================================================
 stages:
-  - stage: CI_BuildAndTest
-    displayName: "Etapa 1: Integración Continua (Pruebas y Empaquetado)"
+  - stage: Build_Package
+    displayName: "Etapa 1: Empaquetado del Proyecto Flask"
     jobs:
-      - job: PythonCI
-        displayName: "Job: Instalación, Pruebas y Empaquetado"
+      - job: PackageJob
+        displayName: "Job: Preparar Artefacto de Despliegue"
         pool:
           name: "AgenteLocal"
         steps:
           - task: UsePythonVersion@0
-            displayName: "Configurar Python 3.11"
+            displayName: "Configurar Python $(PythonVersion)"
             inputs:
-              versionSpec: "3.11"
+              versionSpec: "$(PythonVersion)"
 
           - script: |
               python -m pip install --upgrade pip
               pip install -r requirements.txt
-              pip install pytest requests
             displayName: "Instalar dependencias del proyecto"
 
-          # ✅ Pruebas unitarias con PowerShell (compatible en Windows)
-          - powershell: |
-              Write-Host "Ejecutando pruebas unitarias..."
-              # Añadir la raíz del repositorio al PYTHONPATH
-              $env:PYTHONPATH = "$(Build.SourcesDirectory)"
-              Write-Host "PYTHONPATH establecido en: $env:PYTHONPATH"
-
-              # Ejecutar pytest desde la raíz
-              cd "$(Build.SourcesDirectory)"
-              pytest test --maxfail=1 --disable-warnings -v --junitxml=results.xml
-            displayName: "Ejecutar Pruebas Unitarias (FAIL ON ERROR)"
-
-          - task: PublishTestResults@2
-            displayName: "Publicar Resultados de Pruebas Unitarias"
-            inputs:
-              testResultsFormat: "JUnit"
-              testResultsFiles: "/results.xml"
-              failTaskOnFailedTests: true
-
           - task: CopyFiles@2
-            displayName: "Copiar Código de Aplicación"
+            displayName: "Copiar Archivos del Proyecto para Empaquetado"
             inputs:
               SourceFolder: "$(Build.SourcesDirectory)"
               Contents: |
                 sgt/**
                 requirements.txt
-                test/**
+                app.py
+                main.py
               TargetFolder: "$(DeploymentPath)"
 
           - task: PublishBuildArtifacts@1
-            displayName: "Publicar Artefacto de Despliegue"
+            displayName: "Publicar Artefacto para Despliegue"
             inputs:
               pathToPublish: "$(DeploymentPath)"
               artifactName: "$(ArtifactName)"
 
   # =====================================================
-  # 2️⃣ Etapa: CD - Despliegue Continuo en Azure
+  # 2️⃣ Etapa: Despliegue Continuo (CD)
   # =====================================================
   - stage: CD_Deployment
     displayName: "Etapa 2: Despliegue en Azure App Service"
-    dependsOn: CI_BuildAndTest
+    dependsOn: Build_Package
     condition: succeeded()
 
     jobs:
       - deployment: DeployToAzure
-        displayName: "Job: Desplegar Flask App en Azure"
+        displayName: "Job: Desplegar App Flask en Azure"
         environment: "Entorno-Integrado-SGT"
         pool:
           name: "AgenteLocal"
@@ -94,7 +74,7 @@ stages:
             deploy:
               steps:
                 - task: DownloadPipelineArtifact@2
-                  displayName: "Descargar Artefacto de Código Empaquetado"
+                  displayName: "Descargar Artefacto del Build"
                   inputs:
                     artifactName: "$(ArtifactName)"
                     path: "$(Pipeline.Workspace)/$(ArtifactName)"
@@ -107,31 +87,3 @@ stages:
                     appType: webApp
                     package: "$(Pipeline.Workspace)/$(ArtifactName)/"
                     startupCommand: "gunicorn --bind=0.0.0.0 --workers=4 --timeout=90 sgt.main:app"
-
-  # =====================================================
-  # 3️⃣ Etapa: Test Funcional Post-Deploy
-  # =====================================================
-  - stage: Functional_Tests
-    displayName: "Etapa 3: Pruebas Funcionales Post-Despliegue"
-    dependsOn: CD_Deployment
-    condition: succeeded()
-
-    jobs:
-      - job: FunctionalTest
-        displayName: "Job: Validación en Entorno Productivo (Post-Deploy)"
-        pool:
-          name: "AgenteLocal"
-        steps:
-          - task: UsePythonVersion@0
-            displayName: "Configurar Python 3.11"
-            inputs:
-              versionSpec: "3.11"
-
-          - script: |
-              pip install requests pytest
-            displayName: "Instalar dependencias de prueba"
-
-          - powershell: |
-              Write-Host "Ejecutando pruebas funcionales en la URL desplegada..."
-              pytest test/test_sample.py
-            displayName: "Ejecutar Pruebas Funcionales Post-Despliegue"
