--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,89 +1,151 @@
 # =====================================================
-# 📦 Pipeline CI/CD simplificado para App Flask (SGT)
-# Flujo: Build -> Deploy a Azure WebApp
+# 📦 Pipeline CI/CD para App Flask (SGT)
+# Flujo: CI (Build/Test) -> CD (Deploy a Azure WebApp)
+# Objetivo: Desplegar login.html servido por Flask
+#
+# 🧠 Estructura esperada:
+# SGT/
+# ┣ 📂 sgt/
+# ┃ ┣ 📜 main.py
+# ┃ ┣ 📂 templates/login.html
+# ┃ ┗ 📂 static/ (opcional)
+# ┣ 📜 requirements.txt
+# ┣ 📜 test_deployment.py <--- Archivo de prueba funcional añadido
 # =====================================================
 
 trigger:
-  - main
+- main
 
+# 👷‍♂️ Agente local para ejecutar el pipeline
 pool:
-  name: "AgenteLocal" # 👷‍♂️ Asegúrate que exista este agente local (Windows)
+  name: 'AgenteLocal'
 
+# Variables globales del proyecto
 variables:
-  ArtifactName: "sgt-deploy-package"
-  DeploymentPath: "$(Build.ArtifactStagingDirectory)/$(ArtifactName)"
-  ServiceConnectionName: "AZ-Conexion-SGT"
-  AppServiceName: "sgt-app-integrated-2025"
-  PythonVersion: "3.11"
+  AppSourceDir: '$(Build.SourcesDirectory)/sgt'
+  ArtifactName: 'sgt-deploy-package'
+  DeploymentPath: '$(Build.ArtifactStagingDirectory)/$(ArtifactName)'
+  
+  # ⚙️ Variables de Azure App Service
+  ServiceConnectionName: 'AZ-Conexion-SGT'
+  AppServiceName: 'sgt-app-integrated-2025-atg7ambqdkbhf0b6' # Usamos el nombre de la app (sin el .azurewebsites.net)
 
 # =====================================================
-# 1️⃣ Etapa: Build y Empaquetado
+# 1️⃣ Etapa: CI - Integración Continua (Pruebas Unitarias)
 # =====================================================
 stages:
-  - stage: Build_Package
-    displayName: "Etapa 1: Empaquetado del Proyecto Flask"
-    jobs:
-      - job: PackageJob
-        displayName: "Job: Preparar Artefacto de Despliegue"
-        pool:
-          name: "AgenteLocal"
-        steps:
-          - task: UsePythonVersion@0
-            displayName: "Configurar Python $(PythonVersion)"
+- stage: CI_BuildAndTest
+  displayName: 'Etapa 1: Integración Continua (Pruebas y Empaquetado)'
+  jobs:
+  - job: PythonCI
+    displayName: 'Job: Instalación, Pruebas y Empaquetado'
+    steps:
+
+    # --- 1. Configurar versión de Python ---
+    - task: UsePythonVersion@0
+      displayName: 'Configurar Python 3.11'
+      inputs:
+        versionSpec: '3.11'
+
+    # --- 2. Instalar dependencias ---
+    - script: |
+        pip install -r requirements.txt
+        pip install pytest requests # Instalar 'requests' para la prueba funcional post-deploy
+      displayName: 'Instalar Flask y dependencias (incl. pytest y requests)'
+
+    # --- 3. Ejecutar pruebas unitarias (Actividad 14: Logs) ---
+    - script: |
+        echo "Ejecutando pruebas unitarias de CI..."
+        pytest test --junitxml=results.xml
+      displayName: 'Ejecutar Pruebas Unitarias (FAIL ON ERROR)'
+      # Se asume que el comando 'pytest' fallará si las pruebas unitarias fallan,
+      # lo cual detendrá el pipeline.
+
+    - task: PublishTestResults@2
+      displayName: 'Publicar Resultados de Pruebas Unitarias'
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: '**/results.xml'
+        failTaskOnFailedTests: true # DEBE SER TRUE para un CI riguroso
+
+    # --- 4. Copiar archivos para despliegue ---
+    - task: CopyFiles@2
+      displayName: 'Copiar Código de Aplicación'
+      inputs:
+        SourceFolder: '$(Build.SourcesDirectory)'
+        Contents: |
+          sgt/**
+          requirements.txt
+          test_deployment.py # Incluir el script de prueba funcional
+        TargetFolder: '$(DeploymentPath)'
+
+    # --- 5. Publicar artefactos ---
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publicar Artefacto de Despliegue'
+      inputs:
+        pathToPublish: '$(DeploymentPath)'
+        artifactName: '$(ArtifactName)'
+
+# =====================================================
+# 2️⃣ Etapa: CD - Despliegue Continuo en Azure
+# =====================================================
+- stage: CD_Deployment
+  displayName: 'Etapa 2: Despliegue en Azure App Service'
+  dependsOn: CI_BuildAndTest
+  condition: succeeded()
+  
+  jobs:
+  - deployment: DeployToAzure
+    displayName: 'Job: Desplegar Flask App en Azure'
+    environment: 'Entorno-Integrado-SGT'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+
+          # --- 1. Descargar artefactos ---
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Descargar Artefacto de Código Empaquetado'
             inputs:
-              versionSpec: "$(PythonVersion)"
+              artifactName: '$(ArtifactName)'
+              path: '$(Pipeline.Workspace)/$(ArtifactName)'
 
-          - script: |
-              python -m pip install --upgrade pip
-              pip install -r requirements.txt
-            displayName: "Instalar dependencias del proyecto"
-
-          - task: CopyFiles@2
-            displayName: "Copiar Archivos del Proyecto para Empaquetado"
+          # --- 2. Desplegar a Azure ---
+          - task: AzureWebApp@1
+            displayName: 'Desplegar Flask App a Azure App Service'
             inputs:
-              SourceFolder: "$(Build.SourcesDirectory)"
-              Contents: |
-                sgt/**
-                requirements.txt
-                app.py
-                main.py
-              TargetFolder: "$(DeploymentPath)"
+              azureSubscription: '$(ServiceConnectionName)'
+              appName: '$(AppServiceName)'
+              appType: webApp
+              package: '$(Pipeline.Workspace)/$(ArtifactName)/' # Asegúrate de que apunte a la carpeta
+              startupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 --timeout=90 sgt.main:app'
 
-          - task: PublishBuildArtifacts@1
-            displayName: "Publicar Artefacto para Despliegue"
-            inputs:
-              pathToPublish: "$(DeploymentPath)"
-              artifactName: "$(ArtifactName)"
-
-  # =====================================================
-  # 2️⃣ Etapa: Despliegue Continuo (CD)
-  # =====================================================
-  - stage: CD_Deployment
-    displayName: "Etapa 2: Despliegue en Azure App Service"
-    dependsOn: Build_Package
-    condition: succeeded()
-
-    jobs:
-      - deployment: DeployToAzure
-        displayName: "Job: Desplegar App Flask en Azure"
-        environment: "Entorno-Integrado-SGT"
-        pool:
-          name: "AgenteLocal"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - task: DownloadPipelineArtifact@2
-                  displayName: "Descargar Artefacto del Build"
-                  inputs:
-                    artifactName: "$(ArtifactName)"
-                    path: "$(Pipeline.Workspace)/$(ArtifactName)"
-
-                - task: AzureWebApp@1
-                  displayName: "Desplegar Flask App a Azure App Service"
-                  inputs:
-                    azureSubscription: "$(ServiceConnectionName)"
-                    appName: "$(AppServiceName)"
-                    appType: webApp
-                    package: "$(Pipeline.Workspace)/$(ArtifactName)/"
-                    startupCommand: "gunicorn --bind=0.0.0.0 --workers=4 --timeout=90 sgt.main:app"
+# =====================================================
+# 3️⃣ Etapa: Test Funcional Post-Deploy (Staging/Metricas)
+# =====================================================
+- stage: Functional_Tests
+  displayName: 'Etapa 3: Pruebas Funcionales Post-Despliegue (Staging)'
+  dependsOn: CD_Deployment
+  condition: succeeded()
+  
+  jobs:
+  - job: FunctionalTest
+    displayName: 'Job: Ejecutar Pruebas contra la URL'
+    pool:
+      name: 'AgenteLocal' # Usar un agente para ejecutar la prueba
+    steps:
+      - task: UsePythonVersion@0
+        displayName: 'Configurar Python 3.11'
+        inputs:
+          versionSpec: '3.11'
+          
+      - script: |
+          pip install requests pytest
+        displayName: 'Instalar dependencias de prueba'
+        
+      # --- 1. Ejecutar el script de prueba funcional (Actividad 14: Métricas) ---
+      - script: |
+          echo "Ejecutando pruebas funcionales en la URL desplegada..."
+          # Usamos 'pytest' para ejecutar el script que probará la URL
+          pytest $(Pipeline.Workspace)/$(ArtifactName)/test_deployment.py
+        displayName: 'Ejecutar Pruebas de Despliegue contra URL'
