Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,34 +1,20 @@
 # =====================================================
 # 📦 Pipeline CI/CD para App Flask (SGT)
 # Flujo: CI (Build/Test) -> CD (Deploy a Azure WebApp)
-# Objetivo: Desplegar login.html servido por Flask
-#
-# 🧠 Estructura esperada:
-# SGT/
-# ┣ 📂 sgt/
-# ┃ ┣ 📜 main.py
-# ┃ ┣ 📂 templates/login.html
-# ┃ ┗ 📂 static/ (opcional)
-# ┣ 📜 requirements.txt
-# ┣ 📜 test_deployment.py <--- Archivo de prueba funcional añadido
 # =====================================================
 
 trigger:
 - main
 
-# 👷‍♂️ Agente local para ejecutar el pipeline
 pool:
   name: 'AgenteLocal'
 
-# Variables globales del proyecto
 variables:
   AppSourceDir: '$(Build.SourcesDirectory)/sgt'
   ArtifactName: 'sgt-deploy-package'
   DeploymentPath: '$(Build.ArtifactStagingDirectory)/$(ArtifactName)'
-  
-  # ⚙️ Variables de Azure App Service
   ServiceConnectionName: 'AZ-Conexion-SGT'
-  AppServiceName: 'sgt-app-integrated-2025-atg7ambqdkbhf0b6' # Usamos el nombre de la app (sin el .azurewebsites.net)
+  AppServiceName: 'sgt-app-integrated-2025-atg7ambqdkbhf0b6'
 
 # =====================================================
 # 1️⃣ Etapa: CI - Integración Continua (Pruebas Unitarias)
@@ -41,6 +27,14 @@ stages:
     displayName: 'Job: Instalación, Pruebas y Empaquetado'
     steps:
 
+    # --- 0. Limpiar workspace ---
+    - script: |
+        echo "🧹 Limpiando directorio de trabajo previo..."
+        git clean -xfd
+        echo "Verificando contenido actual de requirements.txt:"
+        type requirements.txt
+      displayName: 'Limpiar workspace y mostrar requirements.txt'
+
     # --- 1. Configurar versión de Python ---
     - task: UsePythonVersion@0
       displayName: 'Configurar Python 3.11'
@@ -49,24 +43,24 @@ stages:
 
     # --- 2. Instalar dependencias ---
     - script: |
-        pip install -r requirements.txt
-        pip install pytest requests # Instalar 'requests' para la prueba funcional post-deploy
+        echo "📦 Instalando dependencias..."
+        pip install --upgrade pip
+        pip install -r requirements.txt || (echo "Reintentando instalación..." && pip install -r requirements.txt)
+        pip install pytest requests
       displayName: 'Instalar Flask y dependencias (incl. pytest y requests)'
 
-    # --- 3. Ejecutar pruebas unitarias (Actividad 14: Logs) ---
+    # --- 3. Ejecutar pruebas unitarias ---
     - script: |
-        echo "Ejecutando pruebas unitarias de CI..."
+        echo "🧪 Ejecutando pruebas unitarias..."
         pytest test --junitxml=results.xml
       displayName: 'Ejecutar Pruebas Unitarias (FAIL ON ERROR)'
-      # Se asume que el comando 'pytest' fallará si las pruebas unitarias fallan,
-      # lo cual detendrá el pipeline.
 
     - task: PublishTestResults@2
       displayName: 'Publicar Resultados de Pruebas Unitarias'
       inputs:
         testResultsFormat: 'JUnit'
         testResultsFiles: '**/results.xml'
-        failTaskOnFailedTests: true # DEBE SER TRUE para un CI riguroso
+        failTaskOnFailedTests: true
 
     # --- 4. Copiar archivos para despliegue ---
     - task: CopyFiles@2
@@ -76,7 +70,7 @@ stages:
         Contents: |
           sgt/**
           requirements.txt
-          test_deployment.py # Incluir el script de prueba funcional
+          test_deployment.py
         TargetFolder: '$(DeploymentPath)'
 
     # --- 5. Publicar artefactos ---
@@ -102,26 +96,23 @@ stages:
       runOnce:
         deploy:
           steps:
-
-          # --- 1. Descargar artefactos ---
           - task: DownloadPipelineArtifact@2
             displayName: 'Descargar Artefacto de Código Empaquetado'
             inputs:
               artifactName: '$(ArtifactName)'
               path: '$(Pipeline.Workspace)/$(ArtifactName)'
 
-          # --- 2. Desplegar a Azure ---
           - task: AzureWebApp@1
             displayName: 'Desplegar Flask App a Azure App Service'
             inputs:
               azureSubscription: '$(ServiceConnectionName)'
               appName: '$(AppServiceName)'
               appType: webApp
-              package: '$(Pipeline.Workspace)/$(ArtifactName)/' # Asegúrate de que apunte a la carpeta
+              package: '$(Pipeline.Workspace)/$(ArtifactName)/'
               startupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 --timeout=90 sgt.main:app'
 
 # =====================================================
-# 3️⃣ Etapa: Test Funcional Post-Deploy (Staging/Metricas)
+# 3️⃣ Etapa: Test Funcional Post-Deploy
 # =====================================================
 - stage: Functional_Tests
   displayName: 'Etapa 3: Pruebas Funcionales Post-Despliegue (Staging)'
@@ -132,20 +123,18 @@ stages:
   - job: FunctionalTest
     displayName: 'Job: Ejecutar Pruebas contra la URL'
     pool:
-      name: 'AgenteLocal' # Usar un agente para ejecutar la prueba
+      name: 'AgenteLocal'
     steps:
       - task: UsePythonVersion@0
         displayName: 'Configurar Python 3.11'
         inputs:
           versionSpec: '3.11'
-          
+
       - script: |
           pip install requests pytest
         displayName: 'Instalar dependencias de prueba'
         
-      # --- 1. Ejecutar el script de prueba funcional (Actividad 14: Métricas) ---
       - script: |
-          echo "Ejecutando pruebas funcionales en la URL desplegada..."
-          # Usamos 'pytest' para ejecutar el script que probará la URL
+          echo "🧪 Ejecutando pruebas funcionales en la URL desplegada..."
           pytest $(Pipeline.Workspace)/$(ArtifactName)/test_deployment.py
         displayName: 'Ejecutar Pruebas de Despliegue contra URL'
